# NetConduit

./: .gitignore  CHANGELOG.md  README.md  cli.py  client.py  example.py  pypi.sh  pyproject.toml  ser.py  server.py  test_client_debug.py  test_server_debug.py  url
.agent/: RULES.md
benchmarks/: benchmark_results.md  websocket_comparison.py
conduit/: __version__.py  client.py  server.py
conduit/connection/: connection.py
conduit/heartbeat/: monitor.py
conduit/transport/: connection_state.py  tcp_socket.py  tls.py
diagrams/: 01_system_architecture.md  02_connection_lifecycle.md  03_message_flow.md  04_rpc_flow.md  README.md
docs/: benchmarks.rst  changelog.rst  conf.py  index.rst
docs/api/: index.rst
docs/guides/: authentication.rst  client.rst  file_transfer.rst  installation.rst  messages.rst  quickstart.rst  rpc.rst  server.rst  streaming.rst
documentation/: README.md  examples.md  quickstart.md
documentation/client/: README.md
documentation/protocol/: README.md
documentation/server/: README.md
examples/racing_game/: client.py  server.py
tests/tls_test/: cert.pem  comprehensive_test.py  key.pem  tls_client.py  tls_server.py
